# fsm_rs

./: Cargo.toml  LICENSE  Readme.md
src/: fsm.rs  lib.rs
